test/integration/bad/err-incr-log-prob-scope.stan
generated quantities {
  real x;
  x = 2.0;
  increment_log_prob(x);
}

